re PR middle-end/65965 (Straight-line memcpy/memset not vectorized when equivalent loop is)

2015-05-04  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/65965
	* tree-vect-data-refs.c (vect_analyze_data_ref_accesses): Split
	store groups at gaps.

	* gcc.dg/vect/bb-slp-33.c: New testcase.

From-SVN: r222765